WIP new fpga board xml format